--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "magratheagrow.in",
   "version": "1.0.0",
   "description": "Dashboards and administration controls for the automation in Magrathea",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/Teagan42/MagratheaGrow.in/issues"
   },
-  "homepage": "https://github.com/Teagan42/MagratheaGrow.in#readme"
+  "homepage": "https://github.com/Teagan42/MagratheaGrow.in#readme",
+  "dependencies": {
+    "crontab": "^1.1.2",
+    "fs": "0.0.2",
+    "node-crontab": "0.0.8",
+    "request": "^2.69.0",
+    "twitter": "^1.2.5"
+  }
 }
