Update session token

--- a/src/config.json
+++ b/src/config.json
@@ -29,7 +29,7 @@
             "displayName": "Veg Room",
             "ip": "192.168.1.109",
             "password": "CAMERA1_PASSWORD",
-            "session": "MKc73PHKhaZi7msnejIjW8RCBOhhGQ",
+            "session": "MKvdHd0G5hdWZo9%2efeloPWhCFBZhHg",
             "uri": "/ccm/CcmGetImageRequest.jpg?hfrom_handle=887330&dSession=1&dSession_Nid={SESSION}&dSession_SerialNumber=1jfiegbpy2gja&dtoken=p0_xxxxxxxxxx"
         }
     }, "services": {
