--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/Teagan42/MagratheaGrow.in#readme",
   "dependencies": {
     "crontab": "^1.1.2",
+    "ds18b20": "^0.1.0",
     "fs": "0.0.2",
+    "lodash": "^4.5.0",
     "node-crontab": "0.0.8",
     "request": "^2.69.0",
     "twitter": "^1.2.5"
