--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "crontab": "^1.1.2",
     "ds18b20": "^0.1.0",
+    "express": "^4.13.4",
     "fs": "0.0.2",
     "lodash": "^4.5.0",
     "node-crontab": "0.0.8",
