--- a/src/config.json
+++ b/src/config.json
@@ -42,7 +42,7 @@
             "displayName": "Flower Room",
             "ip": "192.168.1.142",
             "password": "CAMERA1_PASSWORD",
-            "session": "MMwlC29b5L_R7HcCxYKX8QRCEslhAQ",
+            "session": "MJLj_6sez.GSDtstqQ9ZTwpCEy1hAw",
             "uri": "/ccm/CcmGetImageRequest.jpg?hfrom_handle=887330&dSession=1&dSession_Nid={SESSION}&dSession_SerialNumber=1jfiegbpy2y3q&dtoken=p0_xxxxxxxxxx"
         }
     }, "services": {
